compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_imported_type_in_import.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: hover
---
Hover {
    contents: Scalar(
        String(
            "```gleam\nexample_module.T\n```\n",
        ),
    ),
    range: Some(
        Range {
            start: Position {
                line: 0,
                character: 23,
            },
            end: Position {
                line: 0,
                character: 24,
            },
        },
    ),
}
