compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_labelled_function_head.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub fn main(a, label b) {\n  a + b\n}\n"
---
pub fn main(a, label b) {
▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔  
  a + b
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(Int, label: Int) -> Int\n```\n",
    ),
)
