compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_module_constant.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nconst one = 1\n"
---
/// Exciting documentation
/// Maybe even multiple lines
const one = 1
      ↑▔▔    


----- Hover content -----
Scalar(
    String(
        "```gleam\nInt\n```\n Exciting documentation\n Maybe even multiple lines\n",
    ),
)
