compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_module_constant_invalid_expression.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nconst value = undefined_var\n"
---
const value = undefined_var
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst value: a\n```\n",
    ),
)
