compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_on_pipe_with_invalid_step_6.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> wibble\n  |> filter(fn(value) { value })\n}\n\nfn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) { todo }\n"
---
pub fn main() {
  [1, 2, 3]
  |> wibble
     ↑▔▔▔▔▔
  |> filter(fn(value) { value })
}

fn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) { todo }


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(List(Int)) -> List(Bool)\n```\n",
    ),
)
