compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_over_imported_module.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble\n"
---
import wibble
▔▔▔▔▔▔▔↑▔▔▔▔▔


----- Hover content -----
Scalar(
    String(
        "```gleam\nwibble\n```\n This is the wibble module.\n Here is some documentation about it.\n This module does stuff\nView on [HexDocs](https://hexdocs.pm/app/wibble.html)",
    ),
)
