compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_over_module_name_in_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble\n\npub fn main(w: wibble.Wibble) {\n  todo\n}\n"
---
import wibble

pub fn main(w: wibble.Wibble) {
               ↑▔▔▔▔▔          
  todo
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nwibble\n```\n This is the wibble module.\n Here is some documentation about it.\n This module does stuff\nView on [HexDocs](https://hexdocs.pm/app/wibble.html)",
    ),
)
