compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_over_module_with_path.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble\n\npub fn main() {\n  wobble.wibble()\n}\n"
---
import wibble/wobble

pub fn main() {
  wobble.wibble()
  ↑▔▔▔▔▔         
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nwibble/wobble\n```\n The module documentation\nView on [HexDocs](https://hexdocs.pm/app/wibble/wobble.html)",
    ),
)
